--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=aqTZz0"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=aqTZz0" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
 
   
   
@@ -84,7 +84,7 @@
                     <li class="nav-item">
                         <a class="nav-link link text-primary display-4" href="index.html#contacts01-3">צרו קשר</a>
                     </li><li class="nav-item dropdown">
-                        <a class="nav-link link text-primary dropdown-toggle show display-4" href="file:///C:/Users/%D7%9C%D7%99%D7%A2%D7%93%20%D7%A9%D7%9B%D7%98%D7%A8/AppData/Local/Mobirise.com/Mobirise/amitshechter6630_0040gmail_002ecom/addons/agentm5/components/index.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">אודות</a><div class="dropdown-menu show" aria-labelledby="dropdown-774" data-bs-popper="none"><a class="text-primary dropdown-item display-4" style="text-align:right" href="index.html#header01-g">מי אני<br></a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features1-1">למה אצלי</a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features3-6">עם  מה  אני  בא<br></a></div>
+                        <a class="nav-link link text-primary dropdown-toggle display-4" href="file:///C:/Users/%D7%9C%D7%99%D7%A2%D7%93%20%D7%A9%D7%9B%D7%98%D7%A8/AppData/Local/Mobirise.com/Mobirise/amitshechter6630_0040gmail_002ecom/addons/agentm5/components/index.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">אודות</a><div class="dropdown-menu" aria-labelledby="dropdown-774"><a class="text-primary dropdown-item display-4" style="text-align:right" href="index.html#header01-g">מי אני<br></a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features1-1">למה אצלי</a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features3-6">עם  מה  אני  בא<br></a></div>
                     </li></ul>
                 
 
@@ -405,7 +405,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jvYz2+xTpBopmKPIzzRdFAyulH0Z0QFEPZKrfGQBddggL+aHg0Iy1iKKsr06fsKLEKekys58zm++uP/LglnuRNc99RxiGA+VsYihqzye03J58GfCGrk8HK+2utp11Ce5.wrgXzMQQ5eAbXNqKK68ZfiFSZtmznFeqazECh/biZHRPLfLkM9qLSmVPpFkfTPjF9ERBVE0XFCN0JmdNdRCjkhGxlIggUKNxE9Xt88q8Jbz5hmSly9+GPTRU3fa7EvTh">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OHYqAe8iZQtrbCRJf1PTZMiseOhhQm+FjCYIl3xpHn8kg2GzJEOEeWjepGG/zUo+s6PoW8K6nyRqXw3b3pVkEJIxLJeG3HpDZqmXEzm/KCooZd6ESZ6qT/L5z8gZcBEe.gxif4fycp6/vJkrzk0E4uuXpovGsO6Nnwoe2lkI20AsuBkVadDrbGt/+fO1RjvBkRRfiLm1Ud7kYDx0OZOsTj3XOoIhhrE0Ew6dJlFfOPzVWzkEt1AaFe7D7Qphnv+eJ">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
@@ -502,6 +502,18 @@
                                 <p class="card-desc mbr-fonts-style display-4"><strong>חנות מקוונת של דגים&nbsp; במשלוח חינם עד לבית</strong></p>
                                 <p class="card-text mbr-fonts-style display-7"><br>תודה רבה רבה עמית נתת מעל ומעבר אחי<br>באמת עשית דברים שלא היית צריך לעשות&nbsp;<br>באמת שמח על כל רגע שבחרתי לעשות אצלך אתר אחי לא נראה לי שאפשר לקבל יותר<br>תמורה במחירים האלו<br>תודה רבה מעריך מאוד</p>
                                 <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="https://nanidagim.com/" target="_blank">nanidagim.com</a></div>
+                            </div>
+                        </div>
+                    </div><div class="item features-image item-mb">
+                        <div class="item-wrapper">
+                            <div class="item-img">
+                                <img src="assets/images/-723x577.jpg" alt="" data-slide-to="4" data-bs-slide-to="4">
+                            </div>
+                            <div class="item-content">
+                                <h4 class="card-title mbr-fonts-style display-7"><strong>מרכז למידה מא עד ת&nbsp;</strong></h4>
+                                <p class="card-desc mbr-fonts-style display-4"><strong>חנות מקוונת של דגים&nbsp; במשלוח חינם עד לבית</strong></p>
+                                <p class="card-text mbr-fonts-style display-7">עמית היקר!!!<br>ראשית אפתח בתודה ענקית על בניית אתר מושלם,<br>אבל מה שחשוב יותר מהתוצאה זו הדרך.<br>תודה על דרך מקצועית,סבלנית ואיכותית לאורך כל התהליך,<br>!אתה פשוט תותח<br>פחות מ24 שעות שהאתר באויר, והמחמאות לא פוסקות.<br>,מי שמתלבט חבל לכם על זמן יקר<br>???צריכים אתר<br>.רק עמית שכטר בע"מ<br>מעריכה&nbsp;מאוד🙏🏻,&nbsp;הדר&nbsp;<br></p>
+                                <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="https://merkaz-lamida-a-t.com/" target="_blank">merkaz-lamida-a-t.com</a></div>
                             </div>
                         </div>
                     </div>
