--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="col-12 col-lg-4 card">
                 <div class="image-wrapper">
                     <img src="assets/images/mbr-640x500.png" alt="">
-                    <img src="assets/images/file-640x640.jpg" alt="עמית שכטר">
+                    <img src="assets/images/-whatsapp-2024-04-11-08.36.54-6934c239-640x640.jpeg" alt="עמית שכטר">
                 </div>
             </div>
         </div>
@@ -405,7 +405,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OHYqAe8iZQtrbCRJf1PTZMiseOhhQm+FjCYIl3xpHn8kg2GzJEOEeWjepGG/zUo+s6PoW8K6nyRqXw3b3pVkEJIxLJeG3HpDZqmXEzm/KCooZd6ESZ6qT/L5z8gZcBEe.gxif4fycp6/vJkrzk0E4uuXpovGsO6Nnwoe2lkI20AsuBkVadDrbGt/+fO1RjvBkRRfiLm1Ud7kYDx0OZOsTj3XOoIhhrE0Ew6dJlFfOPzVWzkEt1AaFe7D7Qphnv+eJ">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ui9uJNOmI5oDut1UNARlHb6+KeJZc+FL56IO73SqKH9KlyqSrdmQaSxz+yeLxL1JJrDEvlar+ST7BAQ+dNIuz3GHvBJHsfVBjbMMv69juU4rT9mYuOTXxevzBxoxPlKx.u3d5O/AWJNU+vLP/n+tPmr0HNDxeE+LdqoYJqhybv55Vd2h7R/1+n9rcy4SMan1Nb7dSUb0/tAjMcJtcSHzR8AqN06lKdCJP/HwDXx9cFghoY8+PfB/2DrNvv8xh+3hs">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
