--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <br> לומד במקיף אמי"ת בבאר שבע, מגביר מגמת מדעי המחשב
 <br>ולומד בתוכנית ארצית של ממר"ם
 <br>למעלה משלוש שנים במסגרת התוכנית למדתי את השפות
-<br>c, pythone, java, javascript, css, html,sql<br>ואני שואף להתמיין ליחידות בתחום זה בצה"ל</strong><br></p>
+<br>c, python, java, javascript, css, html,sql<br>ואני שואף להתמיין ליחידות בתחום זה בצה"ל</strong><br></p>
                 </div>
             </div>
             <div class="col-12 col-lg-4 card">
@@ -405,7 +405,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ui9uJNOmI5oDut1UNARlHb6+KeJZc+FL56IO73SqKH9KlyqSrdmQaSxz+yeLxL1JJrDEvlar+ST7BAQ+dNIuz3GHvBJHsfVBjbMMv69juU4rT9mYuOTXxevzBxoxPlKx.u3d5O/AWJNU+vLP/n+tPmr0HNDxeE+LdqoYJqhybv55Vd2h7R/1+n9rcy4SMan1Nb7dSUb0/tAjMcJtcSHzR8AqN06lKdCJP/HwDXx9cFghoY8+PfB/2DrNvv8xh+3hs">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cNq00ndYbx5XYFXOmPgubLq1f6ofkzGD9XVekPdeno1daQfbmEfu5+PfOOnAXwlDniCMxXajCyZ6dg6xWco1CvhGivDM0CsRn8F8kGKh32nkdW2Srsa9HKexQYhYpKk5.tJfM64GY675fKZiyEm+odOGMkBZwISn4cVMvuRr+Uzmut2mTf1F75iWYly3vaDPoZeNa+st6TuxMFNKP/euz6cJJ4gBsSzORFKi7A9m7lCWfIbwXcx2mZXXxe+mQLZNm">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
