--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -23,13 +23,13 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
-    <link rel="stylesheet" href="assets/dropdown/css/style.css">
+    <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=4UIGVM"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=4UIGVM" type="text/css">
 
   
   
@@ -440,7 +440,7 @@
                                 <div class="price-wrapper">
                                     <div class="price-wrap">
                                       <div class="price-container">
-                                                <p class="original-price display-5"><strong>5000-6000</strong></p>
+                                                <p class="original-price display-5"><strong style="">5000-6000</strong></p>
                                                 <p class="discount-price display-5"><strong>4700-5700</strong></p>
                                             </div>
                                         <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="index.html#form01-0"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>תשיארו פניה</a></div>
@@ -475,7 +475,7 @@
                         אודות</strong></h3>
                     <ul class="list mbr-fonts-style display-4">
                         <li class="item-wrap"><a href="index.html#header01-g" class="text-white text-primary"><strong>מי אני</strong></a></li><a href="index.html#header01-g" class="text-primary"><strong>
-                        </strong></a><li class="item-wrap"><em><a href="index.html#features1-1" class="text-white text-primary"><strong>למה אצלי</strong></a></em></li><li class="item-wrap"><em><a href="index.html#features3-6" class="text-white text-primary"><strong>עם  מה  אני  בא</strong></a></em></li><a href="index.html#features3-6" class="text-primary"><strong>
+                        </strong></a><li class="item-wrap"><em style="font-size: 1rem; background-color: transparent;"><a href="index.html#features1-1" class="text-white text-primary"><strong>למה אצלי</strong></a></em></li><li class="item-wrap"><em style="font-size: 1rem; background-color: transparent;"><a href="index.html#features3-6" class="text-white text-primary"><strong>עם  מה  אני  בא</strong></a></em></li><a href="index.html#features3-6" class="text-primary"><strong>
                         </strong></a><li class="item-wrap"><a href="index.html#list01-d" class="text-white text-primary"><strong>שאלות נפוצות</strong></a></li>
                     </ul>
                 </div>
