--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="assets/images/index-meta.jpg">
+  <meta property="og:image" content="assets/images/index-meta.jpg">
+  <meta name="twitter:title" content="עמית שכטר בניית אתרים|בונה אתרים בזול|בניית אתרים|בניית אתרים בישראל">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/file-128x128.png" type="image/x-icon">
   <meta name="description" content="בניית אתרים מקצועיים ומותאמים אישית, שיהפכו את העסק שלך להצלחה.
@@ -25,15 +29,15 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/smart-cart/minicart-theme.css">
+  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=YqBho6"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=YqBho6" type="text/css">
 
   
   
@@ -255,7 +259,7 @@
                     
                     <h4 class="mbr-card-title mbr-fonts-style display-5"><strong>חבילה מספר 2</strong></h4>
                     <p class="mbr-text mbr-fonts-style display-7"><strong>חבילה מספר 2&nbsp;</strong><br><strong>העלת האתר לגוגל ואבטחת האתר</strong><br><strong>
-<br></strong><strong>עלות התחזוקה היא 150 שקלים לחודש ויש לכם&nbsp;</strong><strong><br></strong><br><strong>שתים-שלוש שינוים בשבוע אין עלות שינוי</strong><br><br><strong>תשלום לשנה מראש של תחזוקה חודשית חודשיים מתנה</strong><br><strong>*(הנגשת האתר במידה ונדרשת ע"פ חוק, באחריותך)*<br></strong>
+<br></strong><strong>עלות התחזוקה היא 150 שקלים לחודש ויש לכם&nbsp;</strong><strong><br></strong><br><strong>שתים-שלוש שינוים בשבוע אין עלות שינוי</strong><br><br><strong>תשלום לשנה מראש של תחזוקה חודשית חודשיים מתנה</strong><br><strong style="">*(הנגשת האתר במידה ונדרשת ע"פ חוק, באחריותך)*<br></strong>
 <br><br></p>
                 </div>
             </div>
@@ -406,7 +410,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="dUFUHZkhzT9e/eRtSGgpsmYhmUGGFOrmkuPJpFtUKmpd8Hl0D83sPsZ1RJyd56ws3AjTaNirIBwq9LHwL0idxfTcDmsqksnKdc98lmrZhzUJ8or50NhM64l3LWzVVKrV.D4vC6/GbrktzMzkVQ9ihSKwWaokWTv5sNRxjVybG87nbiJtpR0nXJDY8OcaLgbe7dklPBRJo5yTvUg6ZZEIf/ygHNJwGV80BlKo5qNRqS4B2CFa2m3y4m/j9EZyRP3pY">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OR4w1GmU7q77f2ofQgFObERbhVayz2zcA2W559IDwQjkX4PN190CD6g6Wj/+GGnvmROV1NiKFLlOfD2epmAsD7Nq8iMiHS/OguQl1ND+95n2nHg8OtPhbAHNlYIMeFGs.bfuZkWuGglO07AzgAEJFYHGeXLNL9UMN9SOvHTVY1gRK+ViiCEGITJqqJorHs8Ecs/raEq6VAnNwls9VX1hgth+dDZCeqNcGLdCJD69C6SytCgQgRRCYEjFyNys8naIp">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
@@ -655,7 +659,7 @@
                         אודות</strong></h3>
                     <ul class="list mbr-fonts-style display-4">
                         <li class="item-wrap"><a href="index.html#header01-g" class="text-white text-primary"><strong>מי אני</strong></a></li><a href="index.html#header01-g" class="text-primary"><strong>
-                        </strong></a><li class="item-wrap"><em><a href="index.html#features1-1" class="text-white text-primary"><strong>למה אצלי</strong></a></em></li><li class="item-wrap"><em><a href="index.html#features3-6" class="text-white text-primary"><strong>עם  מה  אני  בא</strong></a></em></li><a href="index.html#features3-6" class="text-primary"><strong>
+                        </strong></a><li class="item-wrap"><em style="font-size: 1rem; background-color: transparent;"><a href="index.html#features1-1" class="text-white text-primary"><strong>למה אצלי</strong></a></em></li><li class="item-wrap"><em style="font-size: 1rem; background-color: transparent;"><a href="index.html#features3-6" class="text-white text-primary"><strong>עם  מה  אני  בא</strong></a></em></li><a href="index.html#features3-6" class="text-primary"><strong>
                         </strong></a><li class="item-wrap"><a href="index.html#list01-d" class="text-white text-primary"><strong>שאלות נפוצות</strong></a></li>
                     </ul>
                 </div>
