--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-  <link rel="stylesheet" href="assets/smart-cart/minicart-theme.css">
   <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
+  <link rel="stylesheet" href="assets/smart-cart/minicart-theme.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=YqBho6"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=YqBho6" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=AVdI4g"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=AVdI4g" type="text/css">
 
   
   
@@ -410,7 +410,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OR4w1GmU7q77f2ofQgFObERbhVayz2zcA2W559IDwQjkX4PN190CD6g6Wj/+GGnvmROV1NiKFLlOfD2epmAsD7Nq8iMiHS/OguQl1ND+95n2nHg8OtPhbAHNlYIMeFGs.bfuZkWuGglO07AzgAEJFYHGeXLNL9UMN9SOvHTVY1gRK+ViiCEGITJqqJorHs8Ecs/raEq6VAnNwls9VX1hgth+dDZCeqNcGLdCJD69C6SytCgQgRRCYEjFyNys8naIp">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zAQyUDkkgZcUyovyB5+ImvOq0mOL28mloSPtJLiNTQlMtcgQQDY6VSvEYwo3WTaxSIdWOxPNuwhbrxmEIt36NXRSSQvGH5azA42Yj0aAq7LSbeacYSn28LGES4JpoSCW.M5Eyjnuxck5/yjmFSFdofvk/Q7y7lMJldCbijUHIRfblwhSSWqXKeNO2NDQN0mx9FHdEUeVzYgPa6hU02bmwbsb9hgrU2eLLvvBbPDPZg6Gh4pltotIwOz3AUSVddkPK">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
@@ -515,8 +515,8 @@
                                 <img src="assets/images/-723x577.jpg" alt="" data-slide-to="4" data-bs-slide-to="4">
                             </div>
                             <div class="item-content">
-                                <h4 class="card-title mbr-fonts-style display-7"><strong>מרכז למידה מא עד ת&nbsp;</strong></h4>
-                                <p class="card-desc mbr-fonts-style display-4"><strong>חנות מקוונת של דגים&nbsp; במשלוח חינם עד לבית</strong></p>
+                                <h4 class="card-title mbr-fonts-style display-7"><strong>הדר ניזרית</strong></h4>
+                                <p class="card-desc mbr-fonts-style display-4">מרכז למידה מא עד ת&nbsp;<br></p>
                                 <p class="card-text mbr-fonts-style display-7">עמית היקר!!!<br>ראשית אפתח בתודה ענקית על בניית אתר מושלם,<br>אבל מה שחשוב יותר מהתוצאה זו הדרך.<br>תודה על דרך מקצועית,סבלנית ואיכותית לאורך כל התהליך,<br>!אתה פשוט תותח<br>פחות מ24 שעות שהאתר באויר, והמחמאות לא פוסקות.<br>,מי שמתלבט חבל לכם על זמן יקר<br>???צריכים אתר<br>.רק עמית שכטר בע"מ<br>מעריכה&nbsp;מאוד🙏🏻,&nbsp;הדר&nbsp;<br></p>
                                 <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="https://merkaz-lamida-a-t.com/" target="_blank">merkaz-lamida-a-t.com</a></div>
                             </div>
