--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=AVdI4g"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=AVdI4g" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=chViLL"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=chViLL" type="text/css">
 
   
   
@@ -313,7 +313,7 @@
 						<div class="col-xl-10 col-md-8 text-white">
 							<h2 class="mbr-section-title mbr-bold mbr-fonts-style display-5">האתר המוביל כעת</h2>
 							<div class="mbr-media show-modal align-center" data-modal=".modalWindow">
-								<a href="http://efratshechternlp.com"><span class="mbr-iconfont fa-play fa mobi-mbri-undo mobi-mbri" style="color: rgb(0, 119, 92); fill: rgb(0, 119, 92);"></span></a>
+								<a href="https://gollasso.com/"><span class="mbr-iconfont fa-play fa mobi-mbri-undo mobi-mbri" style="color: rgb(0, 119, 92); fill: rgb(0, 119, 92);"></span></a>
 							</div>
 
 							<p class="mbr-text mbr-fonts-style display-7"><strong>לחץ על העיגול</strong><br></p>
@@ -410,7 +410,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zAQyUDkkgZcUyovyB5+ImvOq0mOL28mloSPtJLiNTQlMtcgQQDY6VSvEYwo3WTaxSIdWOxPNuwhbrxmEIt36NXRSSQvGH5azA42Yj0aAq7LSbeacYSn28LGES4JpoSCW.M5Eyjnuxck5/yjmFSFdofvk/Q7y7lMJldCbijUHIRfblwhSSWqXKeNO2NDQN0mx9FHdEUeVzYgPa6hU02bmwbsb9hgrU2eLLvvBbPDPZg6Gh4pltotIwOz3AUSVddkPK">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="VAQxU7CE6nCM0RbZtxorIECzQTKAfHpU/9PZApnsgWibGAIc1d4wRuVN1MOupLo85PDkS21hwnqr3v1chzasLpXGBEnFabEIv7fANOoFV63KvfbB8CFqrwiZ/jHR49p/.mUc68QDx7beCzzD9lUWISBMqfhBVAmt+YXInEZqEWWd0j+zP1NoZh/4WYlw+t99Er1hgjJaFOWrWTXApRAxKMr9ipdYtybAHXTDdOo7uETYee3oYGsWy+NkqsSi3SB9H">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
@@ -519,6 +519,18 @@
                                 <p class="card-desc mbr-fonts-style display-4">מרכז למידה מא עד ת&nbsp;<br></p>
                                 <p class="card-text mbr-fonts-style display-7">עמית היקר!!!<br>ראשית אפתח בתודה ענקית על בניית אתר מושלם,<br>אבל מה שחשוב יותר מהתוצאה זו הדרך.<br>תודה על דרך מקצועית,סבלנית ואיכותית לאורך כל התהליך,<br>!אתה פשוט תותח<br>פחות מ24 שעות שהאתר באויר, והמחמאות לא פוסקות.<br>,מי שמתלבט חבל לכם על זמן יקר<br>???צריכים אתר<br>.רק עמית שכטר בע"מ<br>מעריכה&nbsp;מאוד🙏🏻,&nbsp;הדר&nbsp;<br></p>
                                 <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="https://merkaz-lamida-a-t.com/" target="_blank">merkaz-lamida-a-t.com</a></div>
+                            </div>
+                        </div>
+                    </div><div class="item features-image item-mb">
+                        <div class="item-wrapper">
+                            <div class="item-img">
+                                <img src="assets/images/-whatsapp-2024-04-18-11.13.13-0d45a548-499x549.jpg" alt="" data-slide-to="5" data-bs-slide-to="5">
+                            </div>
+                            <div class="item-content">
+                                <h4 class="card-title mbr-fonts-style display-7"><strong>מני ראובן</strong></h4>
+                                <p class="card-desc mbr-fonts-style display-4">בית ספר לכדורגל<br></p>
+                                <p class="card-text mbr-fonts-style display-7">תודה רבה נהנתי מהשרות העלות של&nbsp;<br>האתר זה באמת בדיחה למה שקיבלתי&nbsp;<br>אני מאושר על כל רגע שבניתי אצלך&nbsp;<br>ממליץ בחום&nbsp;<br>ואפרסם אותך המון למה שירות כזה לא<br>ראיתי בחיים</p>
+                                <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="http://gollasso.com" target="_blank">gollasso.com</a></div>
                             </div>
                         </div>
                     </div>
