--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=chViLL"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=chViLL" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=0P5JNA"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=0P5JNA" type="text/css">
 
   
   
@@ -410,7 +410,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="VAQxU7CE6nCM0RbZtxorIECzQTKAfHpU/9PZApnsgWibGAIc1d4wRuVN1MOupLo85PDkS21hwnqr3v1chzasLpXGBEnFabEIv7fANOoFV63KvfbB8CFqrwiZ/jHR49p/.mUc68QDx7beCzzD9lUWISBMqfhBVAmt+YXInEZqEWWd0j+zP1NoZh/4WYlw+t99Er1hgjJaFOWrWTXApRAxKMr9ipdYtybAHXTDdOo7uETYee3oYGsWy+NkqsSi3SB9H">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Ui9OKkSgqEgBCugcHGlj4y6wuPccThW7NLsF932UlxPoLiZ6SH2LX4ih2yEqsjm+s0+8uWbdpBH62XV/ZjeHcC8B9GJ+3k98ruuYCp8xlM06Evf5ybqC4n4jOJkc3Zlb.bWlQPgQ3Hb0SdGO+VRS8ifo0qMM5AsfP2eBDRVkK+KcLJd3rvEp1ZcsIWeUdUDB1ow81ytumFS95wo62ZqYi2a10XZZwQJilgAILUDKQ2GJpP4vs8KgABeuM5jSg1Xz9">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
@@ -529,7 +529,7 @@
                             <div class="item-content">
                                 <h4 class="card-title mbr-fonts-style display-7"><strong>מני ראובן</strong></h4>
                                 <p class="card-desc mbr-fonts-style display-4">בית ספר לכדורגל<br></p>
-                                <p class="card-text mbr-fonts-style display-7">תודה רבה נהנתי מהשרות העלות של&nbsp;<br>האתר זה באמת בדיחה למה שקיבלתי&nbsp;<br>אני מאושר על כל רגע שבניתי אצלך&nbsp;<br>ממליץ בחום&nbsp;<br>ואפרסם אותך המון למה שירות כזה לא<br>ראיתי בחיים</p>
+                                <p class="card-text mbr-fonts-style display-7">תודה רבה נהניתי מהשירות שלך ובנוסף העלות של&nbsp;<br>האתר זה באמת בדיחה בשביל מה שקיבלתי&nbsp;<br>אני מאושר על כל רגע שבניתי אצלך&nbsp;<br>ממליץ בחום&nbsp;<br>ואפרסם אותך המון למה שירות כזה לא<br>ראיתי בחיים</p>
                                 <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="http://gollasso.com" target="_blank">gollasso.com</a></div>
                             </div>
                         </div>
