--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=0P5JNA"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=0P5JNA" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=VMlL4d"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=VMlL4d" type="text/css">
 
   
   
@@ -110,7 +110,7 @@
         <div class="row flex-row-reverse">
             <div class="col-12 col-lg-8 card">
                 <div class="content-wrapper">
-                    <h1 class="mbr-section-title mbr-fonts-style display-1">עמית&nbsp;<span>שכטר</span><br><span>פיתוח</span>&nbsp;אתרים</h1>
+                    <h1 class="mbr-section-title mbr-fonts-style display-1">עמית&nbsp;<span>שכטר</span><br><span>&nbsp; פיתוח</span>&nbsp;אתרים, עיצוב <span>לוגו</span><br></h1>
                     <div class="tags-wrapper">
                         
                         
@@ -410,7 +410,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Ui9OKkSgqEgBCugcHGlj4y6wuPccThW7NLsF932UlxPoLiZ6SH2LX4ih2yEqsjm+s0+8uWbdpBH62XV/ZjeHcC8B9GJ+3k98ruuYCp8xlM06Evf5ybqC4n4jOJkc3Zlb.bWlQPgQ3Hb0SdGO+VRS8ifo0qMM5AsfP2eBDRVkK+KcLJd3rvEp1ZcsIWeUdUDB1ow81ytumFS95wo62ZqYi2a10XZZwQJilgAILUDKQ2GJpP4vs8KgABeuM5jSg1Xz9">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5leGUvywh7eT0gvsFJt482FIp8+mHXdLQxwWqv0xEt7EEk5HLWewqxVD9SxJ5g17Hg4xkf2D85Q3irort/FL3+a04XyqnwvUqYv3BX443xtRjHnveNxGUSxmdp665Moi.RisZsh9scmTB1RlVLptowO73bZWUNIMf7pMFDI/ensrm9TUfeaCZuF4J77jWaCANrOvzqvgypIsv8NwarnSQKImtu9UVKQfgnRDYj7NBgHATpyNQZkvEkaiwTmv7pXw=">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
